--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">My Application</string>
     <string name="hi">打招呼</string>
+    <string name="name_hint">請輸入姓名</string>
 </resources>
